# r-pfbwt

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  rpfbwt.cpp
.github/workflows/: cmake.yml  docker-image.yml
include/: end_arrays_support.hpp  p_inverted_list_support.hpp  rpfbwt_algorithm.hpp  sampled_lcp_support.hpp  v_table_support.hpp  version.hpp  version.hpp.in
src/: rpfbwt_algorithm.cpp  version.cpp.in
tests/: unit_tests.cpp
